
- KAddressBook compatibility fix - allow / in field names, even though it is
  illegal in vCard 3.0.

0.604 - 2008-03-13

- Fixed a bug with lower-case UTF-16 encoded cards not being detected properly.

- Skip over invalidly encoded vCard fields when enumerating them.


0.602 - 2008-03-12

- Updated reminder utility to work with iCal 3.

- Reworked gem to include tests, samples, and binaries.


0.597 - 2008-03-01

- Support for BYSETPOS in recurrence rules (development supported by ZipDX.com)

- Support for FREQ=weekly in recurrence rules (development supported by ZipDX.com)

- Fixed an encode_text() bug (patch supplied by Jan Becvar)

- Fixed problem with interaction between BYMONTH and BYDAY (patch supplied by
  Sam Stephenson of 32signals.com)

- Vevent::Maker - Started adding high-level iCalendar encoding APIs

- Vpim::Vcard::Maker - the vCard maker is moved here

- Vpim::Maker - deprecated

- Vcard::make, Maker::Vcard#delete_if - new

- Vcard::Maker#add_name - deprecate, see Vcard::Maker#name

- Vcard::Maker#fullname= - deprecate, see Vcard::Maker#name

- Added high-level vCard decoding API.

- Beginning to depend on ruby1.8. I'm willing to try for backwards compat if I
  get feedback that this causes difficulties.

- Icalendar#components - new

- Icalendar#vevents - deprecated, see Icalendar#components

- split Vtodo and Vjournal into own files

- Added Recurrence module to Vtodo and Vjournal

- Property::Common#sequence - new

- Property::Common#attachments - new

- Icalendar::Attachment - new

- Maker::Vcard#add_url - new

- ex_mkyourown.rb - new example

- Modularized the component property accessor methods, and added lots of
  Icalendar property support for Vevent, Vtodo, and Vjournal.

- Fixed support for TEXT decoding.

- Use Subversion revision as release sub-version.

- It appears that a top-level vpim.rb that requires everything else is needed
  for ruby-gems, gemspec seems to work now.

- Don't package backup files (.../*.rb~).
